# SUFF-Code

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/configuration/: types.hpp
src/graph/: graph.cpp  graph.h
src/main/: CMakeLists.txt  EdgeListToCSR.cpp  GeneratePattern.cpp  ReassignLabel.cpp  RunMultipleQueries.cpp  SelectEdge.cpp  StudyPerformance.cpp  Test.cpp
src/matching/: BuildTable.cpp  BuildTable.h  CMakeLists.txt  EvaluateQuery.cpp  EvaluateQuery.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQueryPlan.cpp  GenerateQueryPlan.h  matchingcommand.cpp  matchingcommand.h
src/suff/: BloomFilter.hpp  CMakeLists.txt  Filter.hpp  FilterGenerator.hpp  FilterManager.cpp  FilterManager.hpp  FilterSelector.hpp  VFilterGenerator.hpp  bloom_filter.hpp
src/utility/: CMakeLists.txt  QFliter.h  computesetintersection.h  graphoperations.cpp  graphoperations.h
src/utility/han/utils/: util.hpp
